# eyes-of-hell

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
.github/workflows/: buttle.yml  ci.yml  web_zip.yml
src/: axonometric.rs  lib.rs  main.rs  meat.rs  region.rs  util.rs
src/main/: util.rs
src/meat/: color.rs  geometry.rs  input.rs  macros.rs  player.rs  storage.rs
web/: index.html  index.js
web/static/: index.html
