[package]
name = "eyes-of-hell"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[[bin]]
name = "eyes-of-hell"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
web_debug = ["log", "console_log", "console_error_panic_hook"]

[dependencies]
three-d = { version = "0.18.2" }
functor_derive = "0.4.3"
num-traits = "0.2.19"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
log = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
console_log = { version = "1", optional = true }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3.34"
